--- a/app/src/main/res/layout/google_login_btn.xml
+++ b/app/src/main/res/layout/google_login_btn.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:gravity="top|center_horizontal"
     android:clickable="true"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,6 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
+            android:id="@+id/txt_btn_google"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/sign_in_with_google"
