done : minor bug fixes, change of interval time of auto backup from 15min to 6 hours (better resource management), better register of new category.

--- a/app/src/main/res/layout/bottom_sheet_new_product.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_product.xml
@@ -126,6 +126,7 @@
                 android:id="@+id/product_quantity"
                 android:imeOptions="actionDone"
                 android:singleLine="true"
+                android:text="@string/initial_product_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"/>
