--- a/app/src/main/res/layout/dialog_new_category.xml
+++ b/app/src/main/res/layout/dialog_new_category.xml
@@ -75,6 +75,43 @@
         app:layout_constraintTop_toBottomOf="@id/category_name_layout"
         app:layout_constraintEnd_toEndOf="@id/category_name_layout"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/warning_placeholder"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/warning_background"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toBottomOf="@id/color_select"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/warning_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/round_warning_24_yellow"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="12dp"/>
+
+        <TextView
+            android:id="@+id/warning_msg"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:gravity="center_vertical"
+            tools:text="Isso é uma mensagem de erro simples."
+            android:textColor="@color/warning_yellow_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/warning_icon"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <Button
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
@@ -85,7 +122,7 @@
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:text="@string/cancel"
         app:layout_constraintEnd_toStartOf="@+id/btn_ok"
-        app:layout_constraintTop_toBottomOf="@+id/color_select" />
+        app:layout_constraintTop_toBottomOf="@+id/warning_placeholder" />
 
     <Button
         android:id="@+id/btn_ok"
