--- a/app/src/main/res/layout/activity_crash.xml
+++ b/app/src/main/res/layout/activity_crash.xml
@@ -22,7 +22,7 @@
         android:id="@+id/error_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ops... something went wrong!"
+        android:text="@string/ops_something_went_wrong"
         android:layout_marginTop="12dp"
         android:textSize="21sp"
         android:textStyle="bold"
@@ -38,7 +38,7 @@
         android:gravity="center"
         android:layout_marginTop="12dp"
         android:textSize="14sp"
-        android:text="We had an unexpected error. The details were sent to our team, and we will fix it quickly. Sorry for the inconvenience."
+        android:text="@string/exception_screen_message"
         app:layout_constraintTop_toBottomOf="@id/error_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -47,7 +47,7 @@
         android:id="@+id/restart_app"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Restart Comprarei"
+        android:text="@string/restart_comprarei"
         android:textAllCaps="false"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/error_message"
@@ -67,7 +67,7 @@
         android:id="@+id/detail_txv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Details"
+        android:text="@string/details"
         android:layout_marginTop="18dp"
         android:textSize="16sp"
         android:textStyle="bold"
