--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -2,34 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
+    android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:alpha="0.8"
-        android:padding="12dp"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/profile_picture_navigation"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
+        android:layout_marginTop="32dp"
+        app:srcCompat="@drawable/component_2"
+        android:layout_margin="12dp"
+        app:layout_goneMarginTop="?attr/actionBarSize"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:padding="12dp"
-            android:src="@drawable/logo_texto_sem_fundo"
-            android:scaleType="fitStart"
-            android:visibility="visible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/user_name_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Mr. Developer"
+        android:textColor="@color/white"
+        android:textSize="21sp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintStart_toStartOf="@id/profile_picture_navigation"
+        app:layout_constraintTop_toBottomOf="@id/profile_picture_navigation"/>
 
-    </LinearLayout>
-
-
-
-
-
+    <TextView
+        android:id="@+id/user_email_navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        tools:text="mr.developer@email.com"
+        android:textSize="14sp"
+        android:textColor="@color/white"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintTop_toBottomOf="@id/user_name_navigation"
+        app:layout_constraintStart_toStartOf="@id/user_name_navigation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
